exports[`(.not).toHaveHttpVersionNotSupportedStatus > using axios > .not.toHaveHttpVersionNotSupportedStatus > fails when response have status code 505 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveHttpVersionNotSupportedStatus()</intensity>

Expected status code to not be 505 received:
  <red>505</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 505,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveHttpVersionNotSupportedStatus > using axios > .toHaveHttpVersionNotSupportedStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveHttpVersionNotSupportedStatus()</intensity>

Expected status code to be 505 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
